# Slicer-CameraPath

./: CMakeLists.txt  CTestConfig.cmake  README.md
Applications/App/: CMakeLists.txt
Applications/App/Resources/Icons/Medium/: App.icns
CMake/: DashboardTemplate.cmake
CMake/Superbuild/: External_Slicer.cmake  External_iVSPlan.cmake
Modules/Loadable/: CMakeLists.txt
Modules/Loadable/CameraPath/: CMakeLists.txt  qSlicerCameraPathModule.cxx  qSlicerCameraPathModule.h  qSlicerCameraPathModuleWidget.cxx  qSlicerCameraPathModuleWidget.h  qSlicerCameraPathReader.cxx  qSlicerCameraPathReader.h
Modules/Loadable/CameraPath/Logic/: vtkSlicerCameraPathLogic.cxx  vtkSlicerCameraPathLogic.h
Modules/Loadable/CameraPath/MRML/: CMakeLists.txt  vtkMRMLCameraPathNode.cxx  vtkMRMLCameraPathNode.h  vtkMRMLCameraPathStorageNode.cxx  vtkMRMLCameraPathStorageNode.h  vtkMRMLPointSplineNode.cxx  vtkMRMLPointSplineNode.h
Modules/Loadable/CameraPath/Resources/: qSlicerCameraPathModule.qrc
Modules/Loadable/CameraPath/Resources/UI/: qSlicerCameraPathFooBarWidget.ui  qSlicerCameraPathModuleWidget.ui
Modules/Loadable/CameraPath/Widgets/: qSlicerCameraPathFooBarWidget.cxx  qSlicerCameraPathFooBarWidget.h
Modules/Scripted/: CMakeLists.txt
Modules/Scripted/testCameraPath/: CMakeLists.txt  testCameraPath.py
